--- a/src/app/organisms/emoji-board/EmojiBoard.scss
+++ b/src/app/organisms/emoji-board/EmojiBoard.scss
@@ -123,6 +123,7 @@
   & .emoji {
     width: 38px;
     height: 38px;
+    object-fit: contain;
     padding: var(--emoji-padding);
     cursor: pointer;
     &:hover {
